--- a/views/files.ejs
+++ b/views/files.ejs
@@ -11,8 +11,10 @@
 <body>
   <div class="main-container">
     <% if (flashMessages) { %>
-      <% if (flashMessages.success) { %>
-          <p>メッセージ：<%= flashMessages.success %></p>
+      <% if (flashMessages.msg) { %>
+        <div class="alert">
+          <p class="alert-danger"><%= flashMessages.msg %></p>
+        </div>
       <% } %>
     <% } %>
     <ul>
@@ -28,7 +30,7 @@
       <% } %>
     </ul>
     <form method="POST" action="/files/upload" enctype="multipart/form-data">
-      <input type="file" name="file" />
+      <input type="file" name="file" required />
       <input type="submit" value="アップロード" />
     </form>
   </div>
