--- a/views/user.ejs
+++ b/views/user.ejs
@@ -35,6 +35,7 @@
         <div><input class="form-item-style" type="text" name="role" placeholder="権限" value="<%= selectuser.role %>"></div> 
         <div><input class="form-item-style" type="text" name="ymd_start" placeholder="適用開始日" value="<%= selectuser.ymd_start %>"></div> 
         <div><input class="form-item-style" type="text" name="ymd_end" placeholder="適用終了日" value="<%= selectuser.ymd_end %>"></div> 
+        <input type="hidden" name="before_ymd_start" value="<%= selectuser.ymd_start %>">
         <input type="hidden" name="before_ymd_end" value="<%= selectuser.ymd_end %>">
         <input type="hidden" name="ymd_add" value="<%= selectuser.ymd_add %>">
         <input type="hidden" name="id_add" value="<%= selectuser.id_add %>">
@@ -50,11 +51,7 @@
       </div>
     </form>
     <div class="btn-footer">
-      <% if (mode==="updatepwd") { %>
-        <a href="/" class="btn-link">戻る</a>
-      <% } else { %>
-        <a href="/users" class="btn-link">戻る</a>
-      <% } %>
+      <a href="/users" class="btn-link">戻る</a>
       <% if (locals.user){ %>
         <form method="POST" action="/logout">
           <input type="submit" class="btn-link" button value="ログアウト" />
@@ -66,21 +63,21 @@
     let insertbtn = document.getElementById("btn_insert");
     if (insertbtn) {
       insertbtn.addEventListener("click", () => {
-        document.userform.action = "insert";
+        document.userform.action = "/user/insert";
         document.userform.submit();
       })
     }
     let updatebtn = document.getElementById("btn_update");
     if (updatebtn) {
       updatebtn.addEventListener("click", () => {
-        document.userform.action = "/users/update/update";
+        document.userform.action = "/user/update";
         document.userform.submit();
       })
     }
     let deletebtn = document.getElementById("btn_delete");
     if (deletebtn) {
       deletebtn.addEventListener("click", () => {
-        document.userform.action = "/users/update/delete";
+        document.userform.action = "/user/delete";
         document.userform.submit();
       })
     }
