--- a/views/files.ejs
+++ b/views/files.ejs
@@ -33,6 +33,14 @@
       <input type="file" name="file" required />
       <input type="submit" value="アップロード" />
     </form>
+    <div class="btn-footer">
+      <a href="/" class="btn-link">戻る</a>
+      <% if (locals.user){ %>
+        <form method="POST" action="/logout">
+          <input type="submit" class="btn-link" button value="ログアウト" />
+        </form>
+      <% }  %>
+    </div>
   </div>
 </body>
 
