--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -20,6 +20,7 @@ a {
   font-size: 12px;
   letter-spacing: 0.8px;
   margin: 5px;
+  text-align: left;
 }
 
 .form-item-style:focus {
@@ -36,4 +37,39 @@ a {
   padding: 5px 20px;
   font-size: 12px;
   letter-spacing: 0.8px;
+  text-align: left;
 }
+
+.main-container {
+  width:100%;
+  max-width: 900px;
+  max-width: 375px;
+  margin:50px auto;
+}
+
+
+.login-header-img {
+  width: 170px;
+  margin: auto;
+  padding-bottom:20px;
+}
+
+.form-container {
+  text-align: center;
+}
+
+.inputbtn {
+  display: block;
+  background-color: #15A82B;
+  color: #fff;
+  width: 100px;
+  margin: 10px auto 10px auto;
+  padding: 10px 20px;
+  text-align: center;
+  border-radius: 20px;
+  transition: .3s;
+}
+.inputbtn:hover {
+  transform: scale(1.1);
+}
+
