--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,34 +1,49 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <link rel="stylesheet" href="/stylesheets/destyle.css" />
+    <link rel="stylesheet" href="/stylesheets/style.css" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, minimum-scale=1, user-scalable=yes"
+    />
+    <title>ログイン</title>
+  </head>
 
-<head>
-  <link rel="stylesheet" href="/stylesheets/destyle.css" />
-  <link rel="stylesheet" href="/stylesheets/style.css" />
-  <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, user-scalable=yes">
-  <title>ログイン</title>
-</head>
-
-<body>
-  <% if (flashMessages) { %>
-    <% if (flashMessages.msg) { %>
-      <div class="alert">
-        <p class="alert-danger"><%= flashMessages.msg %></p>
+  <body>
+    <% if (flashMessages) { %> <% if (flashMessages.msg) { %>
+    <div class="alert">
+      <p class="alert-danger"><%= flashMessages.msg %></p>
+    </div>
+    <% } %> <% } %>
+    <div class="main-container">
+      <div class="login-header-img">
+        <img src="/images/building_logo.svg" />
       </div>
-    <% } %>
-  <% } %>
-<form action="/login" method="post">
-    <div>
-      <label>ユーザーID：</label>
-      <input type="text" class="form-item-style" name="username" autofocus />
+      <form action="/login" method="POST">
+        <div class="form-container">
+          <div>
+            <input
+              class="form-item-style"
+              type="text"
+              name="username"
+              placeholder="ID"
+              autofocus
+            />
+          </div>
+          <div>
+            <input
+              class="form-item-style"
+              type="password"
+              name="password"
+              placeholder="パスワード"
+            />
+          </div>
+          <div>
+            <input class="inputbtn" type="submit" value="ログイン" />
+          </div>
+        </div>
+      </form>
     </div>
-    <div>
-      <label>パスワード：</label>
-      <input type="password" class="form-item-style" name="password" />
-    </div>
-    <div>
-      <input type="submit" value="ログイン" />
-    </div>
-  </form>
-</body>
-
+  </body>
 </html>
